<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="312dp"
        android:layout_height="28dp"
        android:text="@string/textReg"
        android:textColor="@color/aqua"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/NombreReg"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/textRegName"
        android:inputType="textPersonName"
        android:textColor="@color/aqua"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/correoReg"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/textCorreoReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.298"
        android:textColor="@color/aqua"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/Usuario"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/add_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392"
        android:textColor="@color/aqua"
        android:textColorHint="@color/colorAccent"
        android:textStyle="italic"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/pwsReg"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_pws"
        android:inputType="textPassword"
        android:textColor="@color/aqua"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/aceptarReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textAceptarReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746"
       />

    <CheckBox
        android:id="@+id/recNotif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/textRecNotif"
        android:textColorHint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606"
        android:textSize="16sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>